# agentic-rag-research-assistant

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISIONS.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  results.md  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/: eval_thresholds.json.example  golden_set.jsonl  golden_set.jsonl.example
prompts/: critic.yaml  naive_rag.yaml  planner.yaml  synthesizer.yaml
src/rag_agent/: __init__.py  llm.py  logging_config.py  settings.py
src/rag_agent/api/: deps.py  main.py  schemas.py
src/rag_agent/api/routes/: ask.py
src/rag_agent/db/: __init__.py  client.py
src/rag_agent/eval/: harness.py  loader.py  metrics.py  runner.py  schema.py
src/rag_agent/graph/: graph.py  nodes.py  state.py
src/rag_agent/ingestion/: __init__.py  chunker.py  embedder.py  loader.py  models.py  pipeline.py
src/rag_agent/rag/: __init__.py  agentic.py  naive.py  prompt_loader.py  reranked.py  reranker.py
tests/: conftest.py  test_ask_endpoint.py  test_chunker.py  test_embedder.py  test_eval_harness.py  test_graph.py  test_graph_nodes.py  test_naive_rag.py  test_pipeline.py  test_reranked.py  test_settings.py
