[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-agent"
version = "0.1.0"
requires-python = ">=3.9"  # code targets 3.11; lower bound relaxed for local dev
dependencies = [
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "langchain>=0.2",
    "langchain-anthropic>=0.2",
    "langgraph>=0.1",
    "sentence-transformers>=3.0",
    "psycopg2-binary>=2.9",
    "pgvector>=0.3",
    "structlog>=24.1",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-dotenv>=1.0",
    "nltk>=3.8",
    "pypdf>=4.0",
    "anthropic>=0.28",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ragas>=0.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
